# Chomper

./: Cargo.toml  README.md
.github/workflows/: ci.yml  clippy.yml
benches/: benchmark.rs
src/: lib.rs
