[package]
name = "chomp"
version = "0.1.0"
edition = "2021"
authors = ["Niland Schumacher"]
description = "A regex library designed to be used in a lexer"
homepage = "https://github.com/nilandasd/Chomp"
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
