[package]
name = "chomper"
version = "0.1.8"
edition = "2021"
authors = ["Niland Schumacher <naschuma@ucsc.edu>"]
description = "A regex library designed to be used in a lexer"
homepage = "https://github.com/nilandasd/Chomp"
include = ["/src"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
